prevent video thumbnail from growing too tall
* on some devices, the bottom edge extended lower than desired

[#103705966]

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -173,6 +173,7 @@ video {
     padding: 5px;
     width: 100%;
     height: auto;
+    max-height: 190px;
 }
 
 
